# dinamic-risk-assessment-system

./: .gitignore  CLAUDE.md  Makefile  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  config.dev.json  config.prod.example.json
docs/: DINAMIC_RISK_ASSESSMENT_SYSTEM.md  GITHUB_FIRST_COMMITS.md  PORTFOLIO_OVERVIEW.md  README_PROJECT.md  REVISAO_DE_CODIGO.md  api.md  architecture.md  project_background.md  project_design.md  project_submission_instructions.md  review.txt  rubrica.md  standout_suggestion_optional.md  step1_data_ingestion.md  step2_training_scoring_deploy_ML_model.md  step3_diagnostics.md  step4_model_reporting.md  step5_process_automation.md
notebooks/: README.md
reports/: model_card.md  monitoring_report.md
src/dynamic_risk_assessment/: __init__.py  apicalls.py  app.py  archive_diagnostics.py  config.py  dbsetup.py  deployment.py  diagnostics.py  fullprocess.py  ingestion.py  reporting.py  scoring.py  training.py
src/portfolio_pipeline/: __init__.py  cli.py
starter-file/: BUILD_GUIDE.md  STEP2_GUIDE.md  ingestion.py
submission/: README.md  apicalls.py  apireturns2.txt  app.py  deployment.py  diagnostics.py  finaldata.csv  fullprocess.py  ingestedfiles.txt  ingestion.py  reporting.py  scoring.py  trainedmodel.pkl  training.py
submission/standout/: dbsetup.py  (+2 more)
tests/: conftest.py  test_cli_scoring_step.py  test_portfolio_cli.py
workspace_local/: .gitignore  README.md  apicalls.py  app.py  archive_diagnostics.py  cronjob.txt  dbsetup.py  deployment.py  diagnostics.py  fullprocess.py  ingestion.py  pyproject.toml  pytest.ini  reporting.py  scoring.py  training.py
(+17 files in other folders)
