[project]
name = "dynamic-risk-assessment-system"
version = "0.1.0"
description = "Portfolio version of a dynamic risk assessment MLOps pipeline"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = []

[project.scripts]
dras = "portfolio_pipeline.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
