[project]
name = "dynamic-risk-assessment-system"
version = "0.1.0"
description = "Portfolio version of a dynamic risk assessment MLOps pipeline"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
  "pandas>=1.2",
  "scikit-learn>=0.24",
  "Flask>=1.1",
  "gunicorn>=20.0",
  "matplotlib>=3.3",
  "seaborn>=0.11",
  "numpy>=1.20",
  "requests>=2.25",
]

[project.scripts]
dras = "portfolio_pipeline.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
  "pytest-cov>=4",
]
pdf = [
  "reportlab>=3.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dynamic_risk_assessment", "portfolio_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
